syntax = "proto3";

package SqlserverProto;

service SqlserverService {
    rpc GetSplitSqls(SplitSqlsInput) returns (SplitSqlsOutput) {}
    rpc Advise(AdviseInput) returns (AdviseOutput) {}
    rpc GetRollbackSqls(GetRollbackSqlsInput) returns (GetRollbackSqlsOutput) {}
}

message SplitSqlsInput {
    string Version = 1;
    string Sqls = 2;
}

message Sql {
    string Sql = 1;
    bool IsDDL = 2;
    bool IsDML = 3;
    string ErrMsg = 4;
    bool IsProcedure = 5;
    bool IsFunction = 6;
}

message SplitSqlsOutput {
    repeated Sql SplitSqls = 1;
}

message SqlserverMeta {
    string User = 1;
    string Password = 2;
    string Host = 3;
    string Port = 4;
    string CurrentDatabase = 5;
    string CurrentSchema = 6;
}

message AdviseInput {
    string Version = 1;
    repeated string Sqls = 2;
    repeated string RuleNames = 3;
    SqlserverMeta SqlserverMeta = 4;
    repeated DDLContext DDLContextSqls = 5;
}

message DDLContext {
    repeated string Sqls = 1;
}

message AdviseOutput {
    repeated AdviseResult Results = 1;
    bool BaseValidatorFailed = 2;
}

message AdviseResult {
    string AdviseLevel = 1;
    string AdviseResultMessage = 2;
    bool IsDDL = 3;
    bool IsDML = 4;
    bool IsProcedure = 5;
    bool IsFunction = 6;
}

message Config {
    int64 DMLRollbackMaxRows = 1;
}

message GetRollbackSqlsInput {
    string Version = 1;
    repeated string Sqls = 2;
    SqlserverMeta SqlserverMeta = 3;
    Config RollbackConfig = 4;
}

message GetRollbackSqlsOutput {
    repeated Sql RollbackSqls = 1;
}
